--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,21 +9,36 @@ body {
 @layer base {
   :root {
     --background: 0 0% 100%;
-    --foreground: 0 0% 3.9%;
+    --foreground: 224, 71%, 4%;
     --card: 0 0% 100%;
     --card-foreground: 0 0% 3.9%;
     --popover: 0 0% 100%;
     --popover-foreground: 0 0% 3.9%;
-    --primary: 0 0% 9%;
+    --primary: 239, 84%, 67%;
+    --primary-bg: 239, 84%, 67%;
+    --primary-text: 239, 84%, 67%;
+    --primary-icon: 243, 75%, 59%;
+    --primary-border: 243, 75%, 59%;
     --primary-foreground: 0 0% 98%;
-    --secondary: 0 0% 96.1%;
-    --secondary-foreground: 0 0% 9%;
-    --muted: 0 0% 96.1%;
-    --muted-foreground: 0 0% 45.1%;
-    --accent: 0 0% 96.1%;
+    --secondary: 26, 82%, 53%;
+    --secondary-bg: 26, 82%, 53%;
+    --secondary-text: 26, 82%, 53%;
+    --secondary-icon: 22, 79%, 48%;
+    --secondary-border: 22, 79%, 48%;
+    --secondary-foreground: 0 0% 98%;
+    --muted: 215, 14%, 34%;
+    --muted-border: 224, 71%, 4%, 0.1;
+    --muted-foreground: 0 0% 100%;
+    --accent: 220, 14%, 96%;
     --accent-foreground: 0 0% 9%;
-    --destructive: 0 84.2% 60.2%;
+    --destructive: 9, 99%, 53%;
+    --destryctive-bg: 9, 99%, 53%;
+    --destructive-text: 5, 94%, 48%;
+    --destructive-icon: 5, 94%, 48%;
+    --destructive-border: 5, 94%, 48%;
     --destructive-foreground: 0 0% 98%;
+    --disabled: 216, 12%, 84%;
+    --disabled-foreground: 0 0% 100%;
     --border: 0 0% 89.8%;
     --input: 0 0% 89.8%;
     --ring: 0 0% 3.9%;
@@ -35,21 +50,36 @@ body {
     --radius: 0.5rem;
   }
   .dark {
-    --background: 0 0% 3.9%;
-    --foreground: 0 0% 98%;
+    --background: 224, 71%, 4%;
+    --foreground: 0 0% 100%;
     --card: 0 0% 3.9%;
     --card-foreground: 0 0% 98%;
     --popover: 0 0% 3.9%;
     --popover-foreground: 0 0% 98%;
-    --primary: 0 0% 98%;
-    --primary-foreground: 0 0% 9%;
-    --secondary: 0 0% 14.9%;
+    --primary: 239, 84%, 67%;
+    --primary-bg: 239, 84%, 67%;
+    --primary-text: 239, 84%, 67%;
+    --primary-icon: 243, 75%, 59%;
+    --primary-border: 243, 75%, 59%;
+    --primary-foreground: 0 0% 98%;
+    --secondary: 26, 82%, 53%;
+    --secondary-bg: 26, 82%, 53%;
+    --secondary-text: 26, 82%, 53%;
+    --secondary-icon: 22, 79%, 48%;
+    --secondary-border: 22, 79%, 48%;
     --secondary-foreground: 0 0% 98%;
-    --muted: 0 0% 14.9%;
-    --muted-foreground: 0 0% 63.9%;
-    --accent: 0 0% 14.9%;
+    --disabled: 217, 19%, 27%;
+    --disabled-foreground: 0 0% 100%;
+    --muted: 218, 11%, 65%;
+    --muted-border: 0, 0%, 100%, 0.16;
+    --muted-foreground: 0 0% 100%;
+    --accent: 221, 39%, 11%;
     --accent-foreground: 0 0% 98%;
-    --destructive: 0 62.8% 30.6%;
+    --destructive: 9, 99%, 53%;
+    --destryctive-bg: 9, 99%, 53%;
+    --destructive-text: 5, 94%, 48%;
+    --destructive-icon: 5, 94%, 48%;
+    --destructive-border: 5, 94%, 48%;
     --destructive-foreground: 0 0% 98%;
     --border: 0 0% 14.9%;
     --input: 0 0% 14.9%;
