--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,7 +32,7 @@ body {
     --accent: 220, 14%, 96%;
     --accent-foreground: 0 0% 9%;
     --destructive: 9, 99%, 53%;
-    --destryctive-bg: 9, 99%, 53%;
+    --destructive-bg: 9, 99%, 53%;
     --destructive-text: 5, 94%, 48%;
     --destructive-icon: 5, 94%, 48%;
     --destructive-border: 5, 94%, 48%;
@@ -76,7 +76,7 @@ body {
     --accent: 221, 39%, 11%;
     --accent-foreground: 0 0% 98%;
     --destructive: 9, 99%, 53%;
-    --destryctive-bg: 9, 99%, 53%;
+    --destructive-bg: 9, 99%, 53%;
     --destructive-text: 5, 94%, 48%;
     --destructive-icon: 5, 94%, 48%;
     --destructive-border: 5, 94%, 48%;
