--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,6 +15,7 @@ body {
     --popover: 0 0% 100%;
     --popover-foreground: 0 0% 3.9%;
     --primary: 239, 84%, 67%;
+    --success: 110, 59%, 44.3%;
     --primary-bg: 239, 84%, 67%;
     --primary-text: 239, 84%, 67%;
     --primary-icon: 243, 75%, 59%;
@@ -42,9 +43,9 @@ body {
     --border: 0 0% 89.8%;
     --input: 0 0% 89.8%;
     --ring: 0 0% 3.9%;
-    --chart-1: 12 76% 61%;
-    --chart-2: 173 58% 39%;
-    --chart-3: 197 37% 24%;
+    --chart-1: var(--success);
+    --chart-2: var(--destructive-text);
+    --chart-3: var(--secondary-text);
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
     --radius: 0.5rem;
