--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -57,6 +57,8 @@ body {
     --sidebar-accent-foreground: 240 5.9% 10%;
     --sidebar-border: 0 0% 89.8%;
     --sidebar-ring: 0 0% 3.9%;
+    --th-colour: 240, 6%, 95%;
+    --td-selected: 220, 14%, 95%;
   }
   .dark {
     --background: 224, 71%, 4%;
@@ -106,6 +108,8 @@ body {
     --sidebar-accent-foreground: 0 0% 98%;
     --sidebar-border: 0 0% 14.9%;
     --sidebar-ring: 0 0% 83.1%;
+    --th-colour: 220, 39%, 11%;
+    --td-selected: 220, 29%, 12%;
   }
 }
 
