--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -59,6 +59,10 @@ body {
     --sidebar-ring: 0 0% 3.9%;
     --th-colour: 240, 6%, 95%;
     --td-selected: 220, 14%, 95%;
+    --primary-surface: 226, 100%, 97%;
+    --secondary-surface: 34, 89%, 96%;
+    --success-surface: 103, 84%, 95%;
+    --destructive-surface: 17, 100%, 96%;
   }
   .dark {
     --background: 224, 71%, 4%;
@@ -110,6 +114,10 @@ body {
     --sidebar-ring: 0 0% 83.1%;
     --th-colour: 220, 39%, 11%;
     --td-selected: 220, 29%, 12%;
+    --primary-surface: 244, 47%, 20%;
+    --secondary-surface: 14, 70%, 15%;
+    --success-surface: 115, 76%, 10%;
+    --destructive-surface: 357, 84%, 15%;
   }
 }
 
